test/grammar/failing/i146-union-with-constants.cfr
// http://gsd.uwaterloo.ca:8888/question/676/union-with-constants

AlicePicks ->> int *
BobPicks ->> int *

[AlicePicks = (BobPicks ++ 3) ]